added pagination to design page

--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -139,7 +139,45 @@
                         </div>
                      </div>
         </div>
-
+        <div class="row justify-content-md-center">
+                <div class="col-2">
+                     {% if designs.has_other_pages %}
+                     <ul class="pagination">
+                         {% if designs.has_previous %}
+                            {% if current_cat %}
+                                <li class="page-item"><a href="?cat={{current_cat}}&amp;page={{ designs.previous_page_number }}" class="page-link">&laquo;</a></li>
+                            {% else %}
+                                <li class="page-item"><a href="?page={{ designs.previous_page_number }}" class="page-link">&laquo;</a></li>
+                            {% endif %}
+                        {% else %}
+                            <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
+                            
+                         {% endif %}
+                         {% for i in designs.paginator.page_range %}
+                         {% if designs.number == i %}
+                             <li class="active page-item"><span><a href="?cat={{current_cat}}&amp;page={{ i }}" class="page-link">{{ i }}</a> <span class="sr-only">(current)</span></span></li>
+                         {% else %}
+                             {% if current_cat %}
+                                <li lass="page-item"><a href="?cat={{current_cat}}&amp;page={{ i }}" class="page-link">{{ i }}</a></li>
+                             {% else %}
+                                <li lass="page-item"><a href="?page={{ i }}" class="page-link">{{ i }}</a></li>
+                             {% endif %}
+                         {% endif %}
+                         {% endfor %}
+                         {% if designs.has_next %}
+                            {% if current_cat %}
+                                <li class="page-item"><a href="?cat={{current_cat}}&amp;page={{ designs.next_page_number }}" class="page-link">&raquo;</a></li>
+                            {% else %}
+                                <li class="page-item"><a href="?page={{ designs.next_page_number }}" class="page-link">&raquo;</a></li>
+                            {% endif %}
+                         {% else %}
+                         <li class="page-item disabled"><span class="page-link">&raquo;</span></li>
+                         {% endif %}
+                     </ul>
+                     {% endif %}
+     
+                </div>
+            </div>
 
         <hr>
         <div class="row">
