working on jquery for tags/queryparams

--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -46,6 +46,7 @@
    
 
     </style>
+
 </head>
 <body>
  
@@ -102,23 +103,45 @@
         <hr>
 
 
-
         <div class="row">
                 <div class="container-fluid">
                         <div class="row">
                             <div class="col">
                                     {% if current_cat %}
-                                    <a href="/designs"><button type="button" class="btn btn-secondary btn-sm reduce">All</button></a>
+                                    <button type="button" id="test123" class="btn btn-secondary btn-sm reduce">All</button>
                                     {% else %}
-                                    <a href="/designs"><button type="button" class="btn btn-primary btn-sm reduce">All</button></a>
+                                    <button type="button" id="test123" class="btn btn-primary btn-sm reduce">All</button>
+                                    {% endif %}
+                                    {% for c in cats %}
+                                        {% if current_cat is not iterable %}
+                                                {% if c in current_cat %}
+                                                    <button type="button" id="test123" class="btn btn-primary btn-sm reduce wegweg">{{c}} </button>
+                                                {% else %}
+                                                    <button type="button" id="test123" class="btn btn-secondary btn-sm reduce wegweg">{{c}}</button>
+                                                {% endif %}
+
+                                        {% else %}
+                                            {% if current_cat == c %}
+                                                <button type="button" id="test123" class="btn btn-primary btn-sm reduce ttt">{{c}}</button>
+                                            {% else %}
+                                                <button type="button" id="test123" class="btn btn-secondary btn-sm reduce ttt">{{c}}</button>
+                                            {% endif %}
+
+                                         {% endif %}   
+                                    {% endfor %}
+
+<!--                                     {% if current_cat %}
+                                    <a href="/designs"><button type="button" id="test123" class="btn btn-secondary btn-sm reduce">All</button></a>
+                                    {% else %}
+                                    <a href="/designs"><button type="button" id="test123" class="btn btn-primary btn-sm reduce">All</button></a>
                                     {% endif %}
                                     {% for c in cats %}
                                         {% if current_cat == c %}
-                                            <a href="?cat={{c}}"><button type="button" class="btn btn-primary btn-sm reduce">{{c}}</button></a>
+                                            <a href="?cat={{c}}"><button type="button" id="test123" class="btn btn-primary btn-sm reduce">{{c}}</button></a>
                                         {% else %}
-                                            <a href="?cat={{c}}"><button type="button" class="btn btn-secondary btn-sm reduce">{{c}}</button></a>
+                                            <a href="?cat={{c}}"><button type="button" id="test123" class="btn btn-secondary btn-sm reduce">{{c}}</button></a>
                                         {% endif %}
-                                    {% endfor %}
+                                    {% endfor %} -->
                                     <hr>
                             </div>
                         </div>
@@ -195,5 +218,30 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script>
+            $(document).ready(function(){
+                
+                $(document.body).on('click', '#test123', function(){
+                    var string = $(this).html()
+                    console.log(string)
+                    var url = location.href                    
+                    if (url.indexOf('?') == -1){
+                        query = "?cat=" + string
+                        url += query
+                        console.log(url)
+                    } else if(url.indexOf(string) > -1) {
+                        console.log(url)
+                    } else {
+                        url += "+" + string
+                        console.log(url)
+                        document.location = url
+                    }
+
+
+                })
+                    
+                
+            })
+    </script>
 </body>
 </html>
