--- a/apps/market/templates/market/designs.html
+++ b/apps/market/templates/market/designs.html
@@ -43,7 +43,9 @@
     .reduce {
         font-size: .6em;
     }
-   
+    form {
+        display:inline-block;
+    }
 
     </style>
 
@@ -142,7 +144,7 @@
                                           <div class="card-body">
                                                   <img src="{% static design.display_image %}" class="img-thumbnail">
                                                   <hr>
-                                            <div class="float-right"><a href="/{{design.id}}" class="btn btn-primary btn-sm">View</a> <a href="#" class="btn btn-warning btn-sm">Buy</a>  </div> <h5 class="card-title"><b>${{design.price}}</b></h5>
+                                            <div class="float-right"><a href="/{{design.id}}" class="btn btn-primary btn-sm">View</a>  <form action="add/{{design.id}}" method="POST">{% csrf_token %}<input type="hidden" name="refURL" value="{{request.path}}?{{request.META.QUERY_STRING}}"><button class="btn btn-warning btn-sm">Buy</button> </form> </div> <h5 class="card-title"><b>${{design.price}}</b></h5>
                                           </div>
                                       </div>
                                       <br>
@@ -151,6 +153,10 @@
                         </div>
                      </div>
         </div>
+        {{request.META.HTTP_REFERER}}
+       
+        <!-- <a href="/designs/add/{{design.id}}" class="btn btn-warning btn-sm">Buy</a> -->
+       
         <div class="row justify-content-md-center">
                 <div class="col-2">
                      {% if designs.has_other_pages %}
@@ -210,6 +216,9 @@
     <script>
             $(document).ready(function(){
                 
+                
+
+
                 $(document.body).on('click', '#test123', function(){
                     var string = $(this).html()
                     var url = location.href
