--- a/apps/market/templates/market/editdesign.html
+++ b/apps/market/templates/market/editdesign.html
@@ -65,7 +65,7 @@
                     </li> 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Cart (0)</a>
+                        <a class="nav-link" href="/cart">Cart ({{request.session.cart | length}})</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Checkout</a>
