--- a/apps/market/templates/market/index.html
+++ b/apps/market/templates/market/index.html
@@ -86,7 +86,7 @@
                     </li> 
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Cart ({{request.session.cart | length}})</a>
+                        <a class="nav-link" href="/cart">Cart ({{request.session.cart | length}})</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">Checkout</a>
